-------------------------------------------------------------------------------------------------------------------
version 0.2.3 (09/09/2014)


	-Bugs :
		- change the way context init to solve a bug
		- Fix #14 : Rename /template to /partials
	-Interface :
		- Rename workspace
		- Update description of context


-------------------------------------------------------------------------------------------------------------------

version 0.2.0 (07/21/2014)

	-Functionality :
		D3 directives
	-Bugs :
		Many bugs fix
	-Interface :
		Card and workspace systems

-------------------------------------------------------------------------------------------------------------------

version 0.1.4
Liste des modifications depuis le 23/06/2014
	-Fonctionalitées :
		-Mise a jour des aggrégation pour fonctionner avec le module manager

	-Correction de bug :
		-Correction de bug sur les context par défault

	-Divers :
		-Suppression de fichier inutile
		-Mise a jour des fichiers de langue
		-Suppression de la fonctionnalité de rapport de bug
-------------------------------------------------------------------------------------------------------------------

Liste des modifications depuis le 16/06/2014 (0.1.2 à 0.1.3)
	-Fonctionalitées :
		-D&D de modules.
		-Mémorisation de la position des modules dans les contexts.
		-Recherche automatique lors d'un changement d'index (si autorefresh activé).
		-Ajout des tris dans le module requêtte avancée.

	-Interface Utilisateur :
		-CSV :
			-Ajout de bouttons plus "clairs" pour cacher et afficher les champs.
			-Ajout d'une barre de recherhce pour rechercher un champs.
		-Mots clés :
			-Sélection automatique de l'index courant.
			-Raffraichissement automatique de la liste des mots clés lors de l'ajout d'un mot clé.
			-Suppréssion automatique des espaces dans les mots clés lors de la sauvegarde.
		-Template :
			-Déplacement de la liste des champs en dessous du templates.
			-Aggrandissement de la zone de saisie.

	-Correction de bug :