@@ -176,6 +176,10 @@
 						<span class="glyphicon glyphicon-search">
 						</span>
 					</div>
+					<div ng-click="home()" title="Return to home page" class="ico black">
+						<span class="glyphicon glyphicon-home">
+						</span>
+					</div>
 					<div ng-click="manageKeyword()" title="Open Keywords window " class="ico yellow">
 						<span class="glyphicon" 
 							ng-class="{'glyphicon-font':data.tab != 2, 'glyphicon-home': data.tab == 2}">
